--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   width: 342px;
   height: 238px;
   border-radius: 10px 10px 0px 0px;
-  background-image: url(./images/image-product-mobile.jpg);
+  background-image: url(../images/image-product-mobile.jpg);
   background-size: 342px;
 }
 
@@ -133,7 +133,7 @@ button:active {
     width: 300px;
     height: 450px;
     border-radius: 10px 0px 0px 10px;
-    background-image: url(./images/image-product-desktop.jpg);
+    background-image: url(../images/image-product-desktop.jpg);
     background-size: 300px;
   }
 
